oauth login tests for iserv and sanis

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"inspect": "npm run build && node --inspect=5959 build/src/",
 		"inspect-container": "npm run build && node --inspect=0.0.0.0:5959 build/src/",
 		"start": "npm run nest:start:prod",
+		"cy:open": "cypress open",
 		"coverage": "cross-env NODE_ENV=test nyc npm run mocha",
 		"coverage-codecov": "cross-env NODE_ENV=test nyc report --reporter=text-lcov | codecov --pipe",
 		"mocha": "cross-env NODE_ENV=test mocha --exit --timeout 15000",
@@ -227,6 +228,7 @@
 		"chai-http": "^4.2.0",
 		"codecov": "^3.6.5",
 		"copyfiles": "^2.4.0",
+		"cypress": "^10.10.0",
 		"eslint": "^7.32.0",
 		"eslint-config-airbnb-base": "^14.1.0",
 		"eslint-config-airbnb-typescript": "^12.3.1",
