--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
 		"async": "^3.2.2",
 		"aws-sdk": "^2.1041.0",
 		"axios": "^0.27.2",
+		"axios-mock-adapter": "^1.21.2",
 		"bbb-promise": "^1.2.0",
 		"bcryptjs": "latest",
 		"body-parser": "^1.15.2",
